Prevent CSS-related jumpiness when expanding 'Flag this item' area

--- a/app/assets/stylesheets/_catalog.css.scss
+++ b/app/assets/stylesheets/_catalog.css.scss
@@ -226,10 +226,11 @@
     form.new_flag {
       margin-bottom: 24px;
     }
-    div#all-annotations, #all_flags .flag-info {
+    div#all-annotations, div#all_flags .flag-info {
       margin-top: 0;
     }
     a.flag-details {
+      margin-bottom: 6px;
       &.active {
         background-color: #eeeeee;
       }
